--- a/module/metric/css/preview.ui.css
+++ b/module/metric/css/preview.ui.css
@@ -26,7 +26,7 @@
 .main .table-and-chart {display: flex;}
 .main .table-and-chart-single {height: calc(100vh - 180px);}
 .main .table-and-chart-multiple {height: calc(100% - 56px);}
-.main .table-and-charts {height: calc(100vh - 172px); overflow-y: scroll;}
+.main .table-and-charts {height: calc(100vh - 172px); overflow-y: scroll; transition: height 0.5s ease;}
 .main .metricBox {height: 80%;}
 
 .table-and-chart .table-side {flex: 0 0 40%; overflow-x: hidden; padding-left: 16px; padding-top: 8px; padding-bottom: 16px; padding-right: 2px;}
