--- a/module/instance/css/view.ui.css
+++ b/module/instance/css/view.ui.css
@@ -6,3 +6,4 @@
 .progress-container i {margin: auto; margin-right: 6px;}
 .progress-container .progress {margin: auto; width: 100%; height: .7rem; margin-left: 6px; margin-right: 15px;}
 .label-dot {display: inline-block; width: 8px; height: 8px; padding: 0; line-height: 20px; text-indent: -9999em; border-radius: 50%;}
+#instanceInfoContainer .table>*>tr>* {padding: .5rem .3rem;}
