* Adjust tips page.

--- a/module/execution/css/tips.ui.css
+++ b/module/execution/css/tips.ui.css
@@ -1,2 +1,2 @@
 #tipsModal {margin-top: 10%; max-width: 800px;}
-#tipsModal .panel-heading {border-bottom:1px solid #e5e5e5; padding: 20px;}
+#tipsModal .panel-heading {border-bottom:1px solid #e5e5e5; padding: 10px 20px;}
