--- a/module/metric/css/preview.ui.css
+++ b/module/metric/css/preview.ui.css
@@ -27,13 +27,13 @@
 .main .details:after {content: ""; position: absolute; top: 5px; right: -2px; bottom: 5px; width: 1px; background-color: var(--color-slate-300);}
 .main .chart-line-margin {margin-right: 16px;}
 .main .table-and-chart {display: flex;}
-.main .table-and-chart-single {height: calc(100vh - 180px);}
-.main .table-and-chart-multiple {height: calc(100% - 56px);}
+.main .table-and-chart-single {height: calc(100vh - 180px); padding: 8px 16px 16px 16px;}
+.main .table-and-chart-multiple {max-height: 352px; padding: 8px 16px 16px 16px;}
 .main .canvas {height: calc(100vh - 172px + 48px); overflow-y: scroll;}
 .main .table-and-charts {height: calc(100vh - 172px);}
-.main .metricBox {height: 80%; margin-bottom: 8px;}
+.main .metricBox {max-height: 408px;}
 
-.table-and-chart .table-side {flex: 0 0 40%; overflow-x: hidden; padding-left: 16px; padding-top: 8px; padding-bottom: 16px; padding-right: 2px;}
+.table-and-chart .table-side {flex: 0 0 40%; overflow-x: hidden;}
 .table-and-chart .chart-side {flex: 0 0 60%;}
 .table-and-chart .chart-center {display:flex; justify-content: center; align-items: center;}
 
