--- a/module/metric/css/preview.ui.css
+++ b/module/metric/css/preview.ui.css
@@ -31,7 +31,7 @@
 .main .table-and-chart {display: flex;}
 .main .table-and-chart-single {height: calc(100vh - 180px); padding: 8px 16px 16px 16px;}
 .main .table-and-chart-multiple {max-height: 352px; padding: 8px 16px 16px 16px;}
-.main .canvas {height: calc(100vh - 172px + 48px); overflow-y: scroll;}
+.main .canvas {height: calc(100vh - 172px + 48px); overflow-y: auto;}
 .main .table-and-charts {height: calc(100vh - 172px);}
 .main .metricBox {max-height: 408px;}
 
