--- a/module/metric/css/preview.ui.css
+++ b/module/metric/css/preview.ui.css
@@ -17,6 +17,7 @@
 .side .metric-current {color: var(--color-primary-600); background-color:var(--color-primary-50);}
 
 .side .checkbox-primary {padding-left: 24px; padding-top: 6px; padding-bottom: 6px;}
+.side .checkbox-primary:hover {background-color: var(--color-gray-100);}
 .side .check-list-metric {padding-top: 0; padding-bottom: 12px; gap: 0;}
 
 .main .metric-name {height: 48px; padding-left: 16px; margin-bottom: 8px; border-bottom: 1px solid var(--color-slate-300);}
