* Ellipsis scope cloumn,task#102584, story#49183.

--- a/module/metric/css/preview.ui.css
+++ b/module/metric/css/preview.ui.css
@@ -77,3 +77,5 @@
 
 .filter-panel .filter-actions {display: flex; justify-content: center}
 .filter-panel .filter-actions .toolbar {gap: 15px;}
+
+.scope-ellipsis {display: inline-block; width: 137px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
