--- a/module/metric/css/preview.ui.css
+++ b/module/metric/css/preview.ui.css
@@ -37,6 +37,8 @@
 .main .canvas {height: calc(100vh - 172px + 48px); max-height: 920px; overflow-y: hidden;}
 .main .table-and-charts {height: calc(100vh - 172px); max-height: calc(100% - 48px); overflow-y: scroll;}
 .main .metricBox {max-height: 408px;}
+.chart-container {height: 100%; width: 100%;}
+.chart-type {width: 30%; padding-left: 50px;}
 
 .table-and-chart .table-side {flex: 0 0 400px; overflow-x: hidden;}
 .table-and-chart .chart-side {flex: 0 0 calc(100% - 400px);}
