--- a/module/metric/css/preview.ui.css
+++ b/module/metric/css/preview.ui.css
@@ -39,7 +39,7 @@
 .main .canvas {height: calc(100vh - 172px + 48px); max-height: 920px; overflow-y: hidden;}
 .main .table-and-charts {height: calc(100vh - 172px); max-height: calc(100% - 48px); overflow-y: scroll;}
 .main .metricBox {max-height: 408px;}
-.chart-single {height: 100%; width: 100%;}
+.chart-single {height: calc(100% - 50px); width: 100%;}
 .chart-multiple {height: 328px; width: 100%;}
 .chart-type {width: 30%; padding-left: 50px;}
 
