--- a/module/metric/css/preview.ui.css
+++ b/module/metric/css/preview.ui.css
@@ -34,12 +34,12 @@
 .metric-remove:hover {color: var(--color-primary-500);}
 .main .chart-line-margin {margin-right: 16px;}
 .main .table-and-chart {display: flex;}
-.main .table-and-chart-single {height: calc(100vh - 180px); max-height: 864px; padding: 8px 16px 16px 16px;}
+.main .table-and-chart-single {height: calc(100vh - 180px - 32px); max-height: 864px; padding: 8px 16px 16px 16px;}
 .main .table-and-chart-multiple {max-height: 352px; padding: 8px 16px 16px 16px;}
 .main .canvas {height: calc(100vh - 172px + 48px); max-height: 920px; overflow-y: hidden;}
 .main .table-and-charts {height: calc(100vh - 172px); max-height: calc(100% - 48px); overflow-y: scroll;}
 .main .metricBox {max-height: 408px;}
-.chart-single {height: calc(100% - 50px); width: 100%;}
+.chart-single {height: 100%; width: 100%;}
 .chart-multiple {height: 328px; width: 100%;}
 .chart-type {width: 30%; padding-left: 50px;}
 
@@ -86,7 +86,7 @@
 .filter-panel .filter-actions {display: flex; justify-content: center}
 .filter-panel .filter-actions .toolbar {gap: 15px;}
 
-.cell-ellipsis {display: inline-block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
+.cell-ellipsis {display: inherit; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
 
 .query-inline {padding-left: 80px !important;}
 .query-inline>label {justify-content: flex-start !important; width: 80px !important;}
