--- a/module/metric/css/preview.ui.css
+++ b/module/metric/css/preview.ui.css
@@ -86,8 +86,9 @@
 .filter-panel .filter-actions {display: flex; justify-content: center}
 .filter-panel .filter-actions .toolbar {gap: 15px;}
 
-.cell-ellipsis {display: inherit; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
+.cell-ellipsis {display: inline-block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
 
 .query-inline {padding-left: 80px !important;}
 .query-inline>label {justify-content: flex-start !important; width: 80px !important;}
 .query-btn {padding-left: 20px !important;}
+.picker-nowrap .picker-multi-selections {flex-wrap: nowrap !important; overflow: hidden !important;}
