--- a/www/theme/default/style.css
+++ b/www/theme/default/style.css
@@ -112,6 +112,8 @@ body.xxc-embed.m-productplan-view,body.xxc-embed.m-bug-browse,body.xxc-embed.m-p
 .xxc-embed #headerActions {right: 310px!important;}
 .xxc-embed .modal-iframe .modal-header .close {font-size: 28px !important;}
 .xxc-embed .modal-body {min-height: 500px!important;}
+.xxc-embed #userDropDownMenu, .xxc-embed #visionSwitcher {display: none!important;}
+
 
 #downloadMobile .dropdown-menu {top: -31px !important; min-width: 130px; padding: 0;}
 #downloadMobile .dropdown-menu .mobile-qrcode {padding: 10px 0px;}
