--- a/module/metric/css/preview.ui.css
+++ b/module/metric/css/preview.ui.css
@@ -43,6 +43,9 @@
 .chart-multiple {height: 285px; width: 100%;}
 .chart-type {width: 30%; padding-left: 50px;}
 
+i.star-empty {color: var(--color-slate-400);}
+i.star {color: var(--color-warning-300);}
+
 .table-and-chart .table-side {flex: 0 0 480px; overflow-x: hidden;}
 .table-and-chart .chart-side {flex: 0 0 calc(100% - 480px);}
 .table-and-chart .chart-center {display:flex; justify-content: center; align-items: center;}
