--- a/module/metric/css/preview.ui.css
+++ b/module/metric/css/preview.ui.css
@@ -46,7 +46,7 @@
 i.star-empty {color: var(--color-slate-400);}
 i.star {color: var(--color-warning-300);}
 
-.table-and-chart .table-side {flex: 0 0 480px; overflow-x: hidden;}
+.table-and-chart .table-side {flex: 0 0 480px;}
 .table-and-chart .chart-side {flex: 0 0 calc(100% - 480px);}
 .table-and-chart .chart-center {display:flex; justify-content: center; align-items: center;}
 
