--- a/module/index/css/index.ui.css
+++ b/module/index/css/index.ui.css
@@ -86,3 +86,4 @@
 
 #menuMainNav[z-use-sortable] a[data-app]:hover {cursor: grab;}
 #menuMainNav[z-use-sortable] li.divider:hover {cursor: grab;}
+.tutorial-hl {position: relative; z-index: 1000; box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.4);}
