* [bug] fix bug.

--- a/lib/zin/wg/sqlbuildergroupby/css/v1.css
+++ b/lib/zin/wg/sqlbuildergroupby/css/v1.css
@@ -2,7 +2,7 @@
 .max-h-16 {max-height: 4rem;}
 .basis-128 {flex-basis: 32rem;}
 .w-50 {width: 200px;}
-.h-86 {height: 344px;
+.h-86 {height: 344px;}
 .h-78 {height: 312px;}
 .h-70 {height: 280px;}
 .btn-group>.btn:not(:first-child) {border-left-color: var(--color-transparent);}
