--- a/lib/zin/wg/sqlbuilder/css/v1.css
+++ b/lib/zin/wg/sqlbuilder/css/v1.css
@@ -1,8 +1,14 @@
 .h-86 {height: 344px;}
 .h-78 {height: 312px;}
 .h-70 {height: 280px;}
+.w-50 {width: 200px;}
+.p-0-important {padding: 0 !important;}
+.min-w-1300 {min-width: 1300px;}
 .items-center-important {align-items: center !important;}
 .justify-start-important {justify-content: start !important;}
+#builderPanel .panel-body,
+#builderPanel .panel-footer {padding: 0.75rem 1rem !important;}
+#builderPanel .panel-heading {padding: 0.5rem 1rem !important;}
 
 .builder-step-btn:hover:before {opacity: 0;}
 .builder-step-btn:hover {color: var(--color-primary-500); --tw-ring-opacity: 1; --tw-ring-color: rgba(var(--color-secondary-500-rgb),var(--tw-ring-opacity));}
@@ -18,3 +24,20 @@
     position: absolute;
     left: 1.25rem;
 }
+
+.w-1\/6-gap-4 {width: calc(16.666667% - 1rem);}
+.w-1\/5-gap-4 {width: calc(20% - 1rem);}
+.w-1\/4-gap-4 {width: calc(25% - 1rem);}
+.w-1\/3-gap-4 {width: calc(33.333334% - 1rem);}
+.w-1\/2-gap-4 {width: calc(50% - 1rem);}
+
+.checkbox-col-6 .checkbox-primary {width: calc(100% / 6); flex: none;}
+.checkbox-col-3 .checkbox-primary {width: calc(100% / 3); flex: none;}
+.checkbox-col-2 .checkbox-primary {width: calc(100% / 2); flex: none;}
+.checkbox-col-1 .checkbox-primary {width: 100%; flex: none;}
+.checkbox-col .checkbox-primary>label {width: calc(100% - var(--checkbox-size) - 16px); overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
+
+.max-h-8 {max-height: 2rem;}
+.max-h-16 {max-height: 4rem;}
+.basis-128 {flex-basis: 32rem;}
+.btn-group>.btn:not(:first-child) {border-left-color: var(--color-transparent);}
