* [misc] add page mask for tutorial sidebar on first show.

--- a/module/tutorial/css/index.ui.css
+++ b/module/tutorial/css/index.ui.css
@@ -29,3 +29,5 @@
 .is-single-type-mode #tutorialTabs .tab-content {padding-top: 0;}
 .is-single-type-mode #tutorialTabs .tab-pane {display: block;}
 .pick-container {z-index: 1780;}
+.tutorial-tip-show #iframeWrapper {pointer-events: none;}
+.tutorial-tip-show #iframeWrapper::after {content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0, 0, 0, 0.5); z-index: 1479;}
