* [bug#55191] Hidden the tutorial start button in XXC.

--- a/www/zentaoclient.css
+++ b/www/zentaoclient.css
@@ -8,3 +8,4 @@ body.xxc-embed #userDropDownMenu {display: none !important;}
 body.xxc-embed .titleBox #promptRegenerate {right: 120px;}
 body.xxc-embed #basicInfoLink {margin-right: 120px;}
 body.xxc-embed #appsBar {display: none;}
+body.xxc-embed #tutorial-start-btn {display: none;}
