* [bug#55109] Hide close button and disabled page when finish tutorial.

--- a/module/tutorial/css/index.ui.css
+++ b/module/tutorial/css/index.ui.css
@@ -31,3 +31,5 @@
 .pick-container {z-index: 1780;}
 .tutorial-has-mask #iframeWrapper {pointer-events: none;}
 .tutorial-has-mask #iframeWrapper::after {content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0, 0, 0, 0.5); z-index: 1479;}
+
+.modal-dialog .modal-actions button[data-dismiss="modal"] {display: none;}
