--- a/lib/zin/wg/entitylabel/css/v1.css
+++ b/lib/zin/wg/entitylabel/css/v1.css
@@ -1,7 +1,7 @@
 .entity-label {min-width: 0;}
 .entity-label .label {box-shadow: none; border: 1px solid var(--color-gray-300); color: var(--color-gray-700); background: none; display: inline-block; vertical-align: middle;}
-.entity-title {white-space: nowrap; text-overflow: clip; overflow: hidden; display: inline-block; line-height: 24px; vertical-align: middle;}
-.entity-title-1 {font-size: 1rem; color: var(--color-gray-900); font-weight: bold;}
-.entity-title-2 {font-size: 0.875rem; color: var(--color-gray-900); font-weight: bold;}
-.entity-title-3 {color: var(--color-gray-800); font-weight: bold;}
-.entity-title-3 {color: var(--color-gray-800);}
+.entity-label .entity-title {white-space: nowrap; text-overflow: clip; overflow: hidden; display: inline-block; line-height: 24px; vertical-align: middle;}
+.entity-label .entity-title-1 {font-size: 1rem; color: var(--color-gray-900); font-weight: bold;}
+.entity-label .entity-title-2 {font-size: 0.875rem; color: var(--color-gray-900); font-weight: bold;}
+.entity-label .entity-title-3 {color: var(--color-gray-800); font-weight: bold;}
+.entity-label .entity-title-3 {color: var(--color-gray-800);}
