--- a/module/story/css/create.ui.css
+++ b/module/story/css/create.ui.css
@@ -2,3 +2,4 @@
 #uploadFiles .upload {width: 100%;}
 .no-background .input-group-addon{background: none;}
 .titleBox .input-control-suffix {width: 2.5rem;}
+span#planIdBox {width: 100%;}
