* [task#129807] modify the display of think3c widget.

--- a/lib/zin/wg/think3c/css/v1.css
+++ b/lib/zin/wg/think3c/css/v1.css
@@ -1,1 +1,2 @@
 .model-canvas input[type="text"] {text-align: center;}
+.think-result-content .is-view .model-canvas .item-step-title {font-size: 2.5rem;}
