* [refac] Adjust style for dtable-nested-toggle.

--- a/module/execution/css/task.ui.css
+++ b/module/execution/css/task.ui.css
@@ -1,2 +1,2 @@
-#table-execution-task .dtable-nested-toggle.is-no-child {display: none}
+#table-execution-task .dtable-nested-toggle.is-no-child {margin-left: 0}
 [data-key='__alert'] .modal-body > div{word-wrap: break-word;}
