* [ui] add left padding to lib list in dropmenu in docApp.

--- a/module/api/css/index.ui.css
+++ b/module/api/css/index.ui.css
@@ -24,3 +24,4 @@
 .api-lib-menu + .doc-tree > .tree {padding-top: 0;}
 
 .dropdown-menu .divider + .divider {display: none;}
+.dropmenu-item .tree-item-inner[data-type="lib"] {padding-left: 8px;}
